--- a/server/package.json
+++ b/server/package.json
@@ -5,11 +5,17 @@
     "main": "server.js",
     "type": "module",
     "scripts": {
-        "start": "node --experimental-modules server.js"
+        "start": "node ./src/server.js"
     },
     "author": "Shekhar Maharaj",
     "license": "MIT",
     "dependencies": {
-        "express": "^4.18.2"
-    }
+        "@supabase/supabase-js": "^2.39.3",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "http": "^0.0.1-security",
+        "nodemailer": "^6.9.8",
+        "nodemon": "^3.0.3",
+        "swagger-autogen": "^2.23.7"
+      }
 }
