--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,12 @@
     "license": "MIT",
     "dependencies": {
         "@supabase/supabase-js": "^2.39.3",
+        "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "http": "^0.0.1-security",
         "nodemailer": "^6.9.8",
         "nodemon": "^3.0.3",
         "swagger-autogen": "^2.23.7"
-      }
+    }
 }
