--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "http": "^0.0.1-security",
+        "jsonwebtoken": "^9.0.2",
         "nodemailer": "^6.9.8",
         "nodemon": "^3.0.3",
         "swagger-autogen": "^2.23.7"
