--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "install_client": "cd client && npm install",
         "install_server":"cd server && npm install",
         "start": "concurrently \"npm run client\" \"npm run server\"",
+        "build": "concurrently \"cd client && npm run build\" \"npm run server\"",
         "install": "cd client && npm install && cd ../server && npm install"
     },
     "dependencies": {
