--- a/package.json
+++ b/package.json
@@ -1,16 +1,23 @@
 {
-    "name": "duck-tasks",
+    "name": "server",
     "version": "1.0.0",
+    "description": "Server of Duck Tasks - Made with love by Shekhar Maharaj",
+    "main": "server.js",
+    "type": "module",
     "scripts": {
-        "client": "cd client && npm start",
-        "server": "cd server && npm start",
-        "install_client": "cd client && npm install",
-        "install_server":"cd server && npm install",
-        "start": "concurrently \"npm run client\" \"npm run server\"",
-        "build": "concurrently \"cd client && npm run build\" \"npm run server\"",
-        "install": "cd client && npm install && cd ../server && npm install"
+        "start": "node ./src/server.js"
     },
+    "author": "Shekhar Maharaj",
+    "license": "MIT",
     "dependencies": {
-        "concurrently": "^7.6.0"
+        "@supabase/supabase-js": "^2.39.3",
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "http": "^0.0.1-security",
+        "jsonwebtoken": "^9.0.2",
+        "nodemailer": "^6.9.8",
+        "nodemon": "^3.0.3",
+        "swagger-autogen": "^2.23.7"
     }
 }
